--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,11 @@ allprojects {
 
 ext{
     nav_version = "2.0.0"
-    room_version = "2.1.0-alpha06"//stable pre androidx
+    room_version = "2.1.0-rc01"//stable pre androidx
     app_compat = "1.0.2"
     material = "1.0.0"
     constraint_layout = "1.1.3"
-    core_ktx = "1.0.1"
+    core_ktx = "1.0.2"
     lifecycle_version = "2.0.0"
     legacy_support = "1.0.0"
     test_runner = "1.1.0"
