--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.3.61'
     repositories {
         google()
         jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,12 +23,12 @@ allprojects {
 }
 
 ext{
-    nav_version = "2.1.0"
+    nav_version = "2.2.0-rc03"
     app_compat = "1.1.0"
-    material = "1.0.0"
-    constraint_layout = "1.1.3"
-    core_ktx = "1.1.0"
-    lifecycle_version = "2.1.0"
+    material = "1.2.0-alpha02"
+    constraint_layout = "2.0.0-beta3"
+    core_ktx = "1.2.0-rc01"
+    lifecycle_version = "2.2.0-rc03"
     test_runner = "1.1.0"
     test_espresso = "3.1.1"
     junit = "4.12"
