--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ ext{
     test_runner = "1.1.0"
     test_espresso = "3.1.1"
     junit = "4.12"
+    preference="1.1.0"
 }
 
 task clean(type: Delete) {
