--- a/base/build.gradle
+++ b/base/build.gradle
@@ -83,7 +83,7 @@ publishing {
              ** Replace GITHUB_USERID with your/organisation Github userID
              ** and REPOSITORY with the repository name on GitHub
              */
-            url = uri("https://maven.pkg.github.com/qaptivedev/LabelSpinner")
+            url = uri("https://maven.pkg.github.com/qaptivedev/baselib")
             credentials {
                 /** Create github.properties in root project folder file with
                  ** gpr.usr=GITHUB_USER_ID & gpr.key=PERSONAL_ACCESS_TOKEN
