--- a/base/build.gradle
+++ b/base/build.gradle
@@ -78,7 +78,7 @@ publishing {
 
     repositories {
         maven {
-            name = "LabelSpinner"
+            name = "baselib"
             /** Configure path of your package repository on Github
              ** Replace GITHUB_USERID with your/organisation Github userID
              ** and REPOSITORY with the repository name on GitHub
