--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,12 @@ allprojects {
 }
 
 ext{
-    nav_version = "2.2.0-rc03"
+    nav_version = "2.2.0"
     app_compat = "1.1.0"
-    material = "1.2.0-alpha02"
-    constraint_layout = "2.0.0-beta3"
+    material = "1.2.0-alpha04"
+    constraint_layout = "2.0.0-beta4"
     core_ktx = "1.2.0-rc01"
-    lifecycle_version = "2.2.0-rc03"
+    lifecycle_version = "2.2.0"
     test_runner = "1.1.0"
     test_espresso = "3.1.1"
     junit = "4.12"
