--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,18 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$app_compat"
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
+
+    // Dependencies for local unit tests
     testImplementation "junit:junit:$junit"
-    androidTestImplementation "androidx.test:runner:$test_runner"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$test_espresso"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:$core_testing"
+    testImplementation "org.robolectric:robolectric:$robolectric"
+
+    // AndroidX Test - JVM testing
+    testImplementation "androidx.test:core-ktx:$test_core_ktx"
+    testImplementation "androidx.test.ext:junit:$test_ext_junit"
+
+    // AndroidX Test - Instrumented testing
+    androidTestImplementation "androidx.test.ext:junit:$test_ext_junit"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core"
 }
