--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -50,11 +50,26 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.preference:preference-ktx:$preference"
-
-    testImplementation "junit:junit:$junit"
-    androidTestImplementation "androidx.test:runner:$test_runner"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$test_espresso"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //Hilt core dependencies Injection
+    implementation "com.google.dagger:hilt-android:$hilt_versiom"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_versiom"
+
+    // Dependencies for local unit tests
+    testImplementation "junit:junit:$junit"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:$core_testing"
+    testImplementation "org.robolectric:robolectric:$robolectric"
+
+    // AndroidX Test - JVM testing
+    testImplementation "androidx.test:core-ktx:$test_core_ktx"
+    testImplementation "androidx.test.ext:junit:$test_ext_junit"
+
+    // AndroidX Test - Instrumented testing
+    androidTestImplementation "androidx.test.ext:junit:$test_ext_junit"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core"
+
 }
 def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties"))) //Set env variable GPR_USER & GPR_API_KEY if not adding a properties file
