--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        //hilt
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -29,10 +31,16 @@ ext{
     constraint_layout = "2.0.0-beta4"
     core_ktx = "1.2.0-rc01"
     lifecycle_version = "2.2.0"
-    test_runner = "1.2.0"
-    test_espresso = "3.2.0"
-    junit = "4.12"
     preference="1.1.1"
+    hilt_versiom ="2.28-alpha"
+
+    //test
+    junit = "4.13"
+    core_testing = "2.1.0"
+    robolectric = "4.3.1"
+    test_core_ktx = "1.2.0"
+    test_ext_junit ="1.1.1"
+    espresso_core = "3.3.0-rc01"
 }
 
 task clean(type: Delete) {
