--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -12,8 +12,8 @@ android {
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 29
-        versionCode 5
-        versionName "4.0.0-aplpha05"
+        versionCode 6
+        versionName "4.0.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -78,7 +78,7 @@ def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties"))) //Set env variable GPR_USER & GPR_API_KEY if not adding a properties file
 
 def getVersionName = { ->
-    return "4.0.0-aplpha05" // Replace with version Name
+    return "4.0.0" // Replace with version Name
 }
 
 def getArtificatId = { ->
