--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -61,17 +61,24 @@ dependencies {
 
     // Dependencies for local unit tests
     testImplementation "junit:junit:$junit"
-    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "org.hamcrest:hamcrest-all:$hamcrest"
     testImplementation "androidx.arch.core:core-testing:$core_testing"
     testImplementation "org.robolectric:robolectric:$robolectric"
 
-    // AndroidX Test - JVM testing
-    testImplementation "androidx.test:core-ktx:$test_core_ktx"
-    testImplementation "androidx.test.ext:junit:$test_ext_junit"
-
-    // AndroidX Test - Instrumented testing
+    //Dependencies for instrumentation tests
+    androidTestImplementation "junit:junit:$junit"
     androidTestImplementation "androidx.test.ext:junit:$test_ext_junit"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core"
+    androidTestImplementation "androidx.arch.core:core-testing:$core_testing"
+    androidTestImplementation "androidx.test:rules:$test_rules"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+    // Hilt
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_versiom"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_versiom"
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    androidTestImplementation "androidx.test:core-ktx:$test_core_ktx"
+    // for isolated test case ie reset data permissions etc
+    androidTestUtil "androidx.test:orchestrator:$orchestrator"
 
 }
 def githubProperties = new Properties()
