--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.4.10'
     repositories {
         google()
         jcenter()
@@ -26,10 +26,10 @@ allprojects {
 
 ext{
     nav_version = "2.3.0"
-    app_compat = "1.1.0"
-    material = "1.2.0-alpha05"
+    app_compat = "1.2.0"
+    material = "1.2.1"
     constraint_layout = "2.0.0-beta4"
-    core_ktx = "1.2.0-rc01"
+    core_ktx = "1.3.0"
     lifecycle_version = "2.2.0"
     preference="1.1.1"
     hilt_versiom ="2.28-alpha"
@@ -38,9 +38,14 @@ ext{
     junit = "4.13"
     core_testing = "2.1.0"
     robolectric = "4.3.1"
-    test_core_ktx = "1.2.0"
-    test_ext_junit ="1.1.1"
-    espresso_core = "3.3.0-rc01"
+    test_core_ktx = "1.3.0"
+    test_ext_junit ="1.1.2"
+    espresso_core = "3.3.0"
+    mockito = "2.19.0"
+    fragment_version = "1.3.0-alpha08"
+    test_rules = "1.3.0"
+    orchestrator = "1.3.0"
+    hamcrest = "1.3"
 }
 
 task clean(type: Delete) {
