--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -5,15 +5,15 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
 
 
     defaultConfig {
         minSdkVersion 18
-        targetSdkVersion 29
-        versionCode 6
-        versionName "4.0.0"
+        targetSdkVersion 30
+        versionCode 7
+        versionName "5.0.0-alpha01"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
