--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -85,7 +85,7 @@ def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties"))) //Set env variable GPR_USER & GPR_API_KEY if not adding a properties file
 
 def getVersionName = { ->
-    return "4.0.0" // Replace with version Name
+    return "5.0.0-alpha01" // Replace with version Name
 }
 
 def getArtificatId = { ->
